--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <script type="text/javascript" src="./js/lib/graphics.js"></script>
   <script type="text/javascript" src="./js/lib/math-utils.js"></script>
   <script type="text/javascript" src="./js/lib/sound.js"></script>
+  <script type="text/javascript" src="./js/lib/sprite.js"></script>
+  <script type="text/javascript" src="./js/lib/label.js"></script>
   <script type="text/javascript" src="./js/trece.js"></script>
 
 </head>
