Moved generic draw / hit to lib

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Starway To Trece</title>
+  <title>Starway To 13</title>
 
   <meta charset="utf-8">
   <meta name="description" content="Starway To 13">
