Added tomato and carrot

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="./js/lib/init.js"></script>
   <script type="text/javascript" src="./js/lib/graphics.js"></script>
   <script type="text/javascript" src="./js/lib/math-utils.js"></script>
+  <script type="text/javascript" src="./js/lib/random.js"></script>
   <script type="text/javascript" src="./js/lib/sound.js"></script>
   <script type="text/javascript" src="./js/lib/sprite.js"></script>
   <script type="text/javascript" src="./js/lib/label.js"></script>
