int coordinates, go downstairs, added cat

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Starway To 13</title>
+  <title>Escape from trece</title>
 
   <meta charset="utf-8">
   <meta name="description" content="Starway To 13">
@@ -24,8 +24,8 @@
 
 <body>
   <canvas id="canvas">
-    <h1>Starway To Trece</h1>
-    <p>A videogame about a character going upstairs.</p>
+    <h1>Escape from trece</h1>
+    <p>A videogame about a character running downstairs.</p>
   </canvas>
 </body>
 
