--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Escape from trece</title>
 
   <meta charset="utf-8">
-  <meta name="description" content="Starway To 13">
+  <meta name="description" content="Escape from trece">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" href="./css/games.css">
